[tool.poetry]
name = "codex_test_250520"
version = "0.1.0"
description = ""
authors = ["Codex <codex@openai.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "*"
opencv-python = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
