[tool.poetry]
name = "codex_test_250520"
version = "0.1.0"
description = ""
authors = ["Codex <codex@openai.com>"]
packages = [{include = "imgutil"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "2.2.6"
opencv-python = "4.11.0.86"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
